<resources>
    <string name="app_name">Rewards</string>

    <string name="base_url">http://christopherhield.org/api/</string>
    <string name="clear_API">Tap to clear saved API Key</string>
    <string name="remember">Remember my credentials</string>
    <string name="tap_create">Tap here to create a profile</string>
    <string name="login">LOGIN</string>
    <string name="tell_us">Tell us something about yourself!</string>
    <string name="main_menu_icon">main_menu_icon</string>
    <string name="your_story">Your Story:</string>
    <string name="select_username">Select Username</string>
    <string name="select_password">Select Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_first_name">Last Name, First Name</string>
    <string name="department_name">Department Name</string>
    <string name="position_title">Position Title</string>
    <string name="position_department">Position, Department</string>
    <string name="sample_story">This is my story...</string>
    <string name="prefsFileKey">"MY_PREFS_KEY"</string>
    <string name="save">Save</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="editprofile">Edit Profile</string>
    <string name="deleteprofile">Delete Profile</string>
    <string name="separator">separator</string>
    <string name="points">Points</string>
    <string name="reward_history_profile">Reward History (0):</string>
    <string name="points_to_award">Points to Award:</string>
    <string name="position">Position:</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="department">Department:</string>
    <string name="student_email_edu">Student Email (.edu)</string>
    <string name="student_id_number">Student Id Number</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="add_comment">Add comment</string>


</resources>