<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="149dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintEnd_toStartOf="@+id/points_awarded_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/last_name_first_name_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name_first_name_profile" />

        <TextView
            android:id="@+id/points_awarded_number_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:inputType="textPersonName"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/points_awarded_profile" />

        <TextView
            android:id="@+id/last_name_first_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/position_content_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/position_profile" />

        <TextView
            android:id="@+id/tell_us_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="#ECE8E8"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_story_profile"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/your_story_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:text="@string/your_story"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile" />

        <TextView
            android:id="@+id/points_awarded_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="69dp"
            android:text="@string/points_awarded"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/points_to_award_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:text="@string/points_to_award"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/position_profile" />

        <TextView
            android:id="@+id/department_name_content_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/department_profile" />

        <TextView
            android:id="@+id/department_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="39dp"
            android:text="@string/department"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/points_awarded_profile" />

        <TextView
            android:id="@+id/position_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="22dp"
            android:text="@string/position"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/department_profile" />

        <TextView
            android:id="@+id/points_to_award_content_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/points_to_award_profile" />

        <TextView
            android:id="@+id/reward_history_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/reward_history_profile"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tell_us_profile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="207dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:background="#ECE8E8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reward_history_profile">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


